<resources>
    <string name="changelog_full_title" translatable="false">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_show_full">more…</string>

    <string name="banner_ad_unit_id_main" translatable="false">ca-app-pub-7642059077886773/5598170845</string>
    <string name="banner_ad_unit_id_executing" translatable="false">ca-app-pub-7642059077886773/4562089644</string>

    <string name="superuser_description_more" translatable="false">
        Superuser grants full access to all device features and storage,
        including the secure and sensitive hardware elements of your device.
        This permission is potentially dangerous.</string>
    <string name="superuser_description" translatable="false">SuperUser Permission (ROOT)</string>

    <string name="app_name">Hidden Root</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_donate">Donate</string>

    <string name="your_apps">These are your applications</string>
    <string name="select">Select an app to be executed</string>
    <string name="title_activity_executing_apps">Executing Apps</string>
    <string name="load_all">Loading your apps…</string>
    <string name="not_selected">You must select an app</string>
    <string name="not_runnable">You can not run this app!</string>
    <string name="execute_app">Execute app</string>

    <string name="donate_message">Please pay me a coffee! :)</string>
    <string name="pay_now_string">Pay Now</string>
    <string name="enter_amount_string">Enter Amount</string>
    <string name="message_error_text">You do not have root permission!</string>
    <string name="message_error_title">Error</string>

    <string name="allOff">Disable Root</string>
    <string name="allOn">Enable Root</string>
    <string name="enabled_root">Root Enabled ;)</string>
    <string name="disabled_root">Root Diasabled ;)</string>
    <string name="null_import">Please insert an import!</string>
</resources>
