<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.potenzadomenico.hiddenroot.Donate"
    tools:showIn="@layout/activity_donate">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate_message"
        android:textSize="35sp"
        android:textColor="@color/text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"/>

    <!--<ImageButton
        android:id="@+id/donate_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/donate_paypal"
        android:background="@color/background"/>-->

        <LinearLayout
            android:id="@+id/linearLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_amount_string"
                android:textAlignment="center"
                android:textColor="@color/text" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:inputType="number" />

            <Button
                android:id="@+id/buttonPay"
                android:text="@string/pay_now_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_general" />

        </LinearLayout>

</RelativeLayout>
