<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.potenzadomenico.hiddenroot.ExecutingApps"
    tools:showIn="@layout/activity_executing_apps">

    <LinearLayout
    android:id="@+id/top_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true" >
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_apps"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:layout_centerHorizontal="true" />
    </LinearLayout>

    <ListView
    android:id="@+id/android:list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:choiceMode="singleChoice"
    android:fastScrollEnabled="true"
    android:divider="@color/divider"
    android:dividerHeight="1px"
    android:layout_below="@id/top_view"
    android:layout_above="@+id/bottom_view" />

    <LinearLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50sp">
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/execute_app"
            android:background="@drawable/button_general"
            android:layout_centerHorizontal="true" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_executing"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
